# CodeV-SVA

./: README.md  requirements.txt
SVAClient/: .gitignore  README.md  pyproject.toml  requirements.txt
SVAClient/configs/: nl2sva_human_local_no_rtl_template_pass_at_k.yaml  nl2sva_human_local_nothink_template_pass_at_k.yaml  nl2sva_human_local_template_pass_at_k.yaml  nl2sva_machine_local_nothink_template_pass_at_k.yaml  nl2sva_machine_local_template_pass_at_k.yaml
SVAClient/datasets/: fveval_nl2sva_human.jsonl  fveval_nl2sva_machine.jsonl
SVAClient/eval_local/: eval_nl2sva_human_no_rtl_pass_at_k.sh  eval_nl2sva_human_nothink_pass_at_k.sh  eval_nl2sva_human_pass_at_k.sh  eval_nl2sva_machine_nothink_pass_at_k.sh  eval_nl2sva_machine_pass_at_k.sh  forward_eda.exp  human.slurm  human_no_rtl.slurm  machine.slurm  start_vllm_server.sh
SVAServer/: .gitignore  Executor.py  README.md  Server.py  Utils.py  requirements.txt  start_server.sh  test_server.py
SVAServer/tcls/: correctness_verify.tcl  correctness_verify_impl_only.tcl  (+3 more)
Scripts/: nl2sva_pass_at_k.py
llm-kit-data/: LICENSE  README.md  pyproject.toml
llm-kit-data/examples/: config.yaml
llm-kit-data/src/llmkit_data/cli/: convert_to_llamafactory.py  convert_to_trl.py  eval_apps.py  prep_apps.py  route.py  sample.py  serve.py
llm-kit-data/src/llmkit_data/converter/: llamafactory.py  trl.py
llm-kit-data/src/llmkit_data/eval/: apps_eval.py  apps_run.py  passk.py
llm-kit-data/src/llmkit_data/std/: datasets.py  inference.py
llm-kit-data/src/llmkit_data/utils/: json.py  parallel.py  router.py
(+9 files in other folders)
